fix(tag): replacing gux-tooltip-title with gux-truncate

--- a/packages/genesys-spark-components/src/components/stable/gux-tag/gux-tag.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-tag/gux-tag.scss
@@ -35,7 +35,7 @@
     }
   }
 
-  gux-tooltip-title {
+  gux-truncate {
     white-space: nowrap;
     cursor: default;
 
